Revert "Codex/candidate docker rescue 2026 r2 (#5)"
This reverts commit 93a245f73055fc641839f640b8f3b611453fcc9e.